# pycourse-2025

./: pyproject.toml
data/: example-data.tsv  participants.tsv  sub_9.parquet
notebooks/: getting-started.ipynb  lab-explore.ipynb  participants.ipynb
scripts/: validate_eeg_data.py
src/pycourse/: __init__.py  cleaning.py  plotting.py  preprocessing.py  read_mean_age.py
src/pycourse2/: cleaning.py  data.py  preprocessing.py  read_mean_age.py
