[project]
name = "pycourse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fabrizio Damicelli", email = "fabridamicelli@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "fire>=0.7.1",
    "ipdb>=0.13.13",
    "jupyterlab>=4.4.10",
    "jupyterlab-vim>=4.1.4",
    "matplotlib>=3.10.7",
    "mne>=1.10.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
